# push-to-protected-branch

./: .bumpversion.cfg  .cz.yaml  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  action.yml  main.py  mypy.ini  poetry.lock.backup  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: main.yml  security.yml
push-to-protected-branch/src/: __version__.py  main.py
