[tool.poetry]
name = "push-to-protected-branch"
version = "1.3.1"
description = "Add files, commit and push the commit to a protected branch by Github hooks using Github API"
authors = ["Ait Zeouay Amrane <a.zeouayamrane@gmail.com>"]
packages = [
    { include = "push-to-protected-branch" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "1.55"
python-dotenv = "0.19.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.11b1"
flake8 = "^4.0.1"
mypy = "^0.910"
commitizen = "^2.20.0"
bump2version = "^1.0.1"
skjold = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.skjold]
sources = ["pyup", "gemnasium"]
report_only = false
report_format = 'json'
cache_dir = '.skjold_cache'
cache_expires = 86400
ignore_file = '.skjoldignore'
verbose = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | _build
  | build
  | dist
  | htmlcov
  | venv
  | .venv
)/
'''
